--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -8,7 +8,7 @@
 }
 
 .navbar a.navbar-brand {
-  background: url("../images/spring-logo-dataflow.png") -1px -1px no-repeat;
+  background: url("https://quejuegosdemesa.com/wp-content/uploads/2020/02/idus-martii.jpg") -1px -1px no-repeat;
   margin: 12px 0 6px;
   width: 229px;
   height: 46px;
